another email test

--- a/src/app/_layout.jade
+++ b/src/app/_layout.jade
@@ -185,12 +185,14 @@ mixin color-page(page)
 
 
 mixin sendmail
-      form(action="send_email.php", method="post")
-        p 
-          input(type="text", name="addr", class="email", placeholder="Ваш e-mail") 
-        p 
-          input(type="text", name="message", class="message", placeholder="Ваше сообщение" )
-        btn(class="submit" type="submit") Отправить
+  form(action="http://formspree.io/decor-svadby@mail.ru" method="post")
+    p
+      input(type="email" class ="email" name="_replyto" placeholder="Ваш e-mail")
+    p
+      textarea(name="body" class="message" placeholder="Ваше сообщение")
+    p
+      input(type="submit" value="Отправить")
+
 
 mixin about-page(page)
   +nav(page)
@@ -248,5 +250,4 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
     script(src='/jquery.bxslider.js')
     script(src='/app.min.js')
-    script(src='send_email.php')
 
