--- a/src/app/contact.jade
+++ b/src/app/contact.jade
@@ -2,7 +2,7 @@ extends _layout
 
 block vars
 
-  - var txt = '<p> +7 916-888-72-65 <p> +7 926-346-71-80 <p> decorsvadby@gmail.com'
+  - var txt = '<p>+7-916-612-09-19 <p>+7-909-659-68-94 <p> +7-916-888-72-65 <p>decorsvadby@gmail.com'
   - var page = {title: 'Контакты', url: '', type: 'contact', class: 'page contact', content: {text: txt },list: []};
 
 
