--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -113,7 +113,7 @@ a, p, h1, h2, h3
   :-ms-input-placeholder      
     @content
 
-.email
+.email, .name, .phone
   width: 300
   height: 30
   font-size: 14pt
