--- a/src/sass/partials/_contact.sass
+++ b/src/sass/partials/_contact.sass
@@ -4,6 +4,7 @@
       margin-top: -2rem
   h1
     text-align: center
+    margin-bottom: 3rem
     span
       +breakpoint(min-width $break-small)
         padding: 2.3rem 3.8rem
@@ -51,3 +52,11 @@
 p
   text-align: center
   line-height: 1.5
+
+.button
+  display: inline-block
+  height: 30
+  color: white
+  background-color: $color-pink
+  align-self: center 
+  
