--- a/src/sass/partials/_global.sass
+++ b/src/sass/partials/_global.sass
@@ -21,8 +21,9 @@
   text-decoration: none
   color: $color-pink
   display: block
+  font-size: 20px
   &:first-child
-    font-size: 1.2em
+    font-size: 20px
     text-decoration: underline
 
 
