--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -2,7 +2,7 @@
 .header-title
   width: 100%
   text-align: center
-  font-size: 0.7rem
+  font-size: 0.8rem
   +menu_font
   margin: 0.5rem 0 0.5rem
   span
@@ -69,6 +69,7 @@
   height: 3.5rem
   .left, .right
     height: inherit
+    font-size: 16px
   .left
     float: left
   .right
