--- a/src/app/contact.jade
+++ b/src/app/contact.jade
@@ -3,7 +3,8 @@ extends _layout
 block vars
 
   - var txt = '<p>+7-916-612-09-19 <p>+7-909-659-68-94 <p> +7-916-888-72-65 <p>decorsvadby@gmail.com'
-  - var page = {title: 'Контакты', url: '', type: 'contact', class: 'page contact', content: {text: txt },list: []};
+  - var label = 'Вы можете оставить свои контактные данные, и мы свяжемся с Вами в ближайшее время'
+  - var page = {title: 'Контакты', url: '', type: 'contact', class: 'page contact', content: {text: txt, lbl: label },list: []};
 
 
 block content
