--- a/src/app/order.jade
+++ b/src/app/order.jade
@@ -3,7 +3,8 @@ extends _layout
 block vars
 
   - var txt = ''
-  - var page = {title: 'Заказать оформление', url: '', type: 'order', class: 'page order', content: {text: txt }};
+  - var label = 'Пожалуйста заполните свои контактные данные ниже, и наш представитель свяжется с Вами в ближайшее время'
+  - var page = {title: 'Заказать оформление', url: '', type: 'order', class: 'page order', content: {text: txt, lbl: label }};
 
 
 block content
