change links to other elements and other zones in all zones and elements

--- a/src/app/element/candelabra/index.jade
+++ b/src/app/element/candelabra/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Канделябры', url: 'element/candelabra', type: 'element-page', class: 'page element candelabra', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/candelabra/candelabra-', qnt: 11}, button: {text: 'Заказать оформление канделябров'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Входная зона', link: 'enter'})
+  - page.list.push({title: 'Драпировка тканями', link: 'drapery'})
+  - page.list.push({title: 'Световые конструкции', link: 'light-constructions'})
+  - page.list.push({title: 'Presswall', link: 'presswall'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
