--- a/src/app/element/centerpiece/index.jade
+++ b/src/app/element/centerpiece/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Centerpiece', url: 'element/centerpiece', type: 'element-page', class: 'page element centerpiece', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/centerpiece/centerpiece-', qnt: 11}, button: {text: 'Заказать оформление centerpiece'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
+  - page.list.push({title: 'Композиции на столы', link: 'table-composition'})
   - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Букеты и бутоньерки', link: 'bouquets-boutonnieres'})
+  - page.list.push({title: 'Украшение авто', link: 'auto-decor'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
