--- a/src/app/element/enter/index.jade
+++ b/src/app/element/enter/index.jade
@@ -7,9 +7,10 @@ block vars
   - var page = {title: 'Входная зона', url: 'element/enter', type: 'element-page', class: 'page element enter', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/enter/enter-', qnt: 10}, button: {text: 'Заказать оформление входной зоны'}, list2: []};
 
   - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Украшение стульев', link: 'chairs-decor'})
+  - page.list.push({title: 'Ниспадающие композиции', link: 'flowing-compositions'})
+  - page.list.push({title: 'Постеры и фото', link: 'posters-photos'}) 
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
