--- a/src/app/element/garlands/index.jade
+++ b/src/app/element/garlands/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Гирлянды', url: 'element/garlands', type: 'element-page', class: 'page element garlands', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/garlands/garlands-', qnt: 12}, button: {text: 'Заказать оформление гирлянд'}, list2: []};
 
+  - page.list.push({title: 'Арка', link: 'arc'})
   - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Украшение стульев', link: 'chairs-decor'})
+  - page.list.push({title: 'Ниспадающие композиции', link: 'flowing-compositions'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
