--- a/src/app/element/hanging-decor/index.jade
+++ b/src/app/element/hanging-decor/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Подвесной декор', url: 'element/hanging-decor', type: 'element-page', class: 'page element hanging-decor', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/hanging-decor/hanging-decor-', qnt: 13}, button: {text: 'Заказать оформление подвесного декора'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Арка', link: 'arc'})
   - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Букеты и бутоньерки', link: 'bouquets-boutonnieres'})
+  - page.list.push({title: 'Украшение авто', link: 'auto-decor'})
+  - page.list.push({title: 'Композиции для фотозон', link: 'photo-composition'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
