--- a/src/app/element/signs-labels/index.jade
+++ b/src/app/element/signs-labels/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Указатели и таблички', url: 'element/signs-labels', type: 'element-page', class: 'page element signs-labels', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/signs-labels/signs-labels-', qnt: 13}, button: {text: 'Заказать оформление табличек и указателей'}, list2: []};
 
-  - page.list.push({title: 'Арка', link: 'arc'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
+  - page.list.push({title: 'Композиции для фотозон', link: 'photo-composition'})
+  - page.list.push({title: 'Канделябры', link: 'candelabra'})
   - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Венки и браслеты', link: 'wreaths-bracelets'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
