--- a/src/app/element/stairway/index.jade
+++ b/src/app/element/stairway/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Лестница', url: 'element/stairway', type: 'element-page', class: 'page element stairway', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/stairway/stairway-', qnt: 9}, button: {text: 'Заказать оформление лестницы'}, list2: []};
 
-  - page.list.push({title: 'Арка', link: 'arc'})
   - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Сервировка стола', link: 'tableware'})
+  - page.list.push({title: 'Качели', link: 'swing'})
+  - page.list.push({title: 'Указатели и таблички', link: 'signs-labels'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
