--- a/src/app/element/table-composition/index.jade
+++ b/src/app/element/table-composition/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Композиции на столы', url: 'element/table-composition', type: 'element-page', class: 'page element table-composition', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/table-composition/table-composition-', qnt: 12}, button: {text: 'Заказать оформление композиций'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Канделябры', link: 'candelabra'})
+  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'}) 
+  - page.list.push({title: 'Венки и браслеты', link: 'wreaths-bracelets'})
+  - page.list.push({title: 'Инсталляции', link: 'installation'}) 
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
