--- a/src/app/zone/apperitive/index.jade
+++ b/src/app/zone/apperitive/index.jade
@@ -7,10 +7,10 @@ block vars
 
   - var page = {title: 'Зона аперитива', url: 'zone/aperitive', type: 'zone-page', class: 'page zone aperitive', content: {desc: description, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/apperitive/apperitive-', qnt: 10}, button: {text: 'Заказать оформление зоны аперитива'}, list2: []};
 
-  - page.list.push({title: 'Welcome', link: 'welcome'})
-  - page.list.push({title: 'Президиум', link: 'presidium'})
+  - page.list.push({title: 'Welcome-зона', link: 'welcome'})
+  - page.list.push({title: 'Candy-bar', link: 'candy-bar'})
+  - page.list.push({title: 'Фотозона', link: 'photo'})
   - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
-  - page.list.push({title: 'Детский стол', link: 'kinder-table'})
 
 
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
