--- a/src/app/zone/candy-bar/index.jade
+++ b/src/app/zone/candy-bar/index.jade
@@ -8,10 +8,10 @@ block vars
 
   - var page = {title: 'Candy-bar', url: 'zone/Candy-bar', type: 'zone-page', class: 'page zone Candy-bar', content: {desc: description, decor: decor, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/candy-bar/candy-bar-', qnt: 13}, button: {text: 'Заказать оформление candy-bar'}, list2: []};
 
-  - page.list.push({title: 'Welcome', link: 'welcome'})
-  - page.list.push({title: 'Президиум', link: 'presidium'})
-  - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
+  - page.list.push({title: 'Вынос торта', link: 'cake-takeaway'})
+  - page.list.push({title: 'Выездная регистрация', link: 'registration'})
   - page.list.push({title: 'Детский стол', link: 'kinder-table'})
+  - page.list.push({title: 'Танцпол', link: 'dance-floor'})
 
 
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
