--- a/src/app/zone/dance-floor/index.jade
+++ b/src/app/zone/dance-floor/index.jade
@@ -8,10 +8,10 @@ block vars
 
   - var page = {title: 'Танцпол', url: 'zone/dance-floor', type: 'zone-page', class: 'page zone dance-floor', content: {desc: description, decor: decor, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/dance-floor/dance-floor-', qnt: 7}, button: {text: 'Заказать оформление танцпола'}, list2: []};
 
-  - page.list.push({title: 'Welcome', link: 'welcome'})
+  - page.list.push({title: 'Зона подарков и пожеланий', link: 'gifts-wishes'})
+  - page.list.push({title: 'Лаунж-зона', link: 'lounge'})
   - page.list.push({title: 'Президиум', link: 'presidium'})
-  - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
-  - page.list.push({title: 'Детский стол', link: 'kinder-table'})
+  - page.list.push({title: 'Зона аперитива', link: 'apperitive'})
 
 
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
