--- a/src/app/zone/gifts-wishes/index.jade
+++ b/src/app/zone/gifts-wishes/index.jade
@@ -8,10 +8,10 @@ block vars
 
   - var page = {title: 'Зона подарков и пожеланий', url: 'zone/gifts-wishes', type: 'zone-page', class: 'page zone gifts-wishes', content: {desc: description, decor: decor, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/gifts-wishes/gifts-wishes-', qnt: 7}, button: {text: 'Заказать оформление зоны подарков и пожеланий'}, list2: []};
 
-  - page.list.push({title: 'Welcome', link: 'welcome'})
-  - page.list.push({title: 'Президиум', link: 'presidium'})
+  - page.list.push({title: 'Candy-bar', link: 'candy-bar'})
+  - page.list.push({title: 'Фотозона', link: 'photo'})
   - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
-  - page.list.push({title: 'Детский стол', link: 'kinder-table'})
+  - page.list.push({title: 'Welcome-зона', link: 'welcome'})
 
 
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
