--- a/src/app/zone/guest-tables/index.jade
+++ b/src/app/zone/guest-tables/index.jade
@@ -7,10 +7,10 @@ block vars
 
   - var page = {title: 'Столы гостей', url: 'zone/guest-tables', type: 'zone-page', class: 'page zone guest-tables', content: {desc: description, decor: decor, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/guest-tables/guest-tables-', qnt: 12}, button: {text: 'Заказать оформление столов гостей'}, list2: []};
 
-  - page.list.push({title: 'Welcome', link: 'welcome'})
-  - page.list.push({title: 'Президиум', link: 'presidium'})
-  - page.list.push({title: 'Выездная регистрация', link: 'registration'})
   - page.list.push({title: 'Детский стол', link: 'kinder-table'})
+  - page.list.push({title: 'Танцпол', link: 'dance-floor'})
+  - page.list.push({title: 'Вынос торта', link: 'cake-takeaway'})
+  - page.list.push({title: 'Выездная регистрация', link: 'registration'})
 
 
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
