--- a/src/app/zone/presidium/index.jade
+++ b/src/app/zone/presidium/index.jade
@@ -6,12 +6,12 @@ block vars
   - var decor = 'С точки зрения декора должно быть выполнено в едином стиле (стол и задник). Создает ощущение единой картины или сцены, в которую погружаются молодые и которая украшает пару.'
   - var elements = 'Элементы: Композиция на столы, Ниспадающие композиции, Press wall.'
 
-  - var page = {title: 'Президиум', url: 'zone/presidium', type: 'zone-page', class: 'page zone presidium', content: {desc: description, decor: decor, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/presidium/presidium-', qnt: 9}, button: {text: 'Заказать оформление президиума'}, list2: []}
+  - var page = {title: 'Президиум', url: 'zone/presidium', type: 'zone-page', class: 'page zone presidium', content: {desc: description, decor: decor, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/presidium/presidium-', qnt: 9}, button: {text: 'Заказать оформление президиума'}, list2: []};
 
-  - page.list.push({title: 'Welcome', link: 'welcome'})
-  - page.list.push({title: 'Выездная регистрация', link: 'registration'})
   - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
-  - page.list.push({title: 'Детский стол', link: 'kinder-table'})
+  - page.list.push({title: 'Welcome-зона', link: 'welcome'})
+  - page.list.push({title: 'Candy-bar', link: 'candy-bar'})
+  - page.list.push({title: 'Фотозона', link: 'photo'})
 
 
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
