--- a/src/app/zone/welcome/index.jade
+++ b/src/app/zone/welcome/index.jade
@@ -6,11 +6,11 @@ block vars
   - var decor = 'Декор: Или обыгрывание идеи входа (декор дверного пространства или проема) или его имитация.'
   - var elements = 'Элементы:  Входная зона,  Лестница,  Grand декор, Указатели и таблички, Press wall.'
 
-  - var page = {title: 'Welcome-зона', url: 'zone/welcome', type: 'zone-page', class: 'page zone welcome', content: {desc: description, decor: decor, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/welcome/welcome-', qnt: 9}, button: {text: 'Заказать оформление welcome-зоны'}, list2: []}
+  - var page = {title: 'Welcome-зона', url: 'zone/welcome', type: 'zone-page', class: 'page zone welcome', content: {desc: description, decor: decor, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/welcome/welcome-', qnt: 9}, button: {text: 'Заказать оформление welcome-зоны'}, list2: []};
 
+  - page.list.push({title: 'Танцпол', link: 'dance-floor'})
+  - page.list.push({title: 'Вынос торта', link: 'cake-takeaway'})
   - page.list.push({title: 'Выездная регистрация', link: 'registration'})
-  - page.list.push({title: 'Президиум', link: 'presidium'})
-  - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
   - page.list.push({title: 'Детский стол', link: 'kinder-table'})
 
 
