--- a/src/app/element/auto-decor/index.jade
+++ b/src/app/element/auto-decor/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Украшение авто', url: 'element/auto-decor', type: 'element-page', class: 'page element auto-decor', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/auto-decor/auto-decor-', qnt: 13}, button: {text: 'Заказать украшение авто'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Арка', link: 'arc'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Инсталляции', link: 'installation'})
+  - page.list.push({title: 'Гирлянды', link: 'garlands'})
+  - page.list.push({title: 'Входная зона', link: 'enter'})
+  - page.list.push({title: 'Драпировка тканями', link: 'drapery'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
