--- a/src/app/element/bouquets-boutonnieres/index.jade
+++ b/src/app/element/bouquets-boutonnieres/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Букеты и бутоньерки', url: 'element/bouquets-boutonnieres', type: 'element-page', class: 'page element bouquets-boutonnieres', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/bouquets-boutonnieres/bouquets-boutonnieres-', qnt: 14}, button: {text: 'Заказать букеты и бутоньерки'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Венки и браслеты', link: 'wreaths-bracelets'})
+  - page.list.push({title: 'Инсталляции', link: 'installation'})
+  - page.list.push({title: 'Гирлянды', link: 'garlands'})
+  - page.list.push({title: 'Входная зона', link: 'enter'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
