--- a/src/app/element/chairs-decor/index.jade
+++ b/src/app/element/chairs-decor/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Украшение стульев', url: 'element/chairs-decor', type: 'element-page', class: 'page element chairs-decor', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/chairs-decor/chairs-decor-', qnt: 12}, button: {text: 'Заказать оформление стульев'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Арка', link: 'arc'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Сервировка стола', link: 'tableware'})
+  - page.list.push({title: 'Качели', link: 'swing'})
+  - page.list.push({title: 'Указатели и таблички', link: 'signs-labels'}) 
+  - page.list.push({title: 'Композиции на столы', link: 'table-composition'})   
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
