--- a/src/app/element/drapery/index.jade
+++ b/src/app/element/drapery/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Драпировка тканями', url: 'element/drapery', type: 'element-page', class: 'page element drapery', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/drapery/drapery-', qnt: 13}, button: {text: 'Заказать оформление тканями'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Украшение стульев', link: 'chairs-decor'})
+  - page.list.push({title: 'Ниспадающие композиции', link: 'flowing-compositions'})
+  - page.list.push({title: 'Постеры и фото', link: 'posters-photos'})
+  - page.list.push({title: 'Centerpiece', link: 'centerpiece'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
