--- a/src/app/element/flower-path/index.jade
+++ b/src/app/element/flower-path/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Дорожки из цветов', url: 'element/flower-path', type: 'element-page', class: 'page element flower-path', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/flower-path/flower-path-', qnt: 11}, button: {text: 'Заказать оформление дорожек из цветов'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
+  - page.list.push({title: 'Драпировка тканями', link: 'drapery'})
+  - page.list.push({title: 'Световые конструкции', link: 'light-constructions'})
+  - page.list.push({title: 'Presswall', link: 'presswall'})
   - page.list.push({title: 'Арка', link: 'arc'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
