--- a/src/app/element/flowing-compositions/index.jade
+++ b/src/app/element/flowing-compositions/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Ниспадающие композиции', url: 'element/flowing-compositions', type: 'element-page', class: 'page element flowing-compositions', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/flowing-compositions/flowing-compositions-', qnt: 10}, button: {text: 'Заказать оформление ниспадающих композиций'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Качели', link: 'swing'})
+  - page.list.push({title: 'Указатели и таблички', link: 'signs-labels'})
+  - page.list.push({title: 'Композиции на столы', link: 'table-composition'})
+  - page.list.push({title: 'Grand декор', link: 'grand-decor'})    
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
