--- a/src/app/element/grand-decor/index.jade
+++ b/src/app/element/grand-decor/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Grand декор', url: 'element/grand-decor', type: 'element-page', class: 'page element grand-decor', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/grand-decor/grand-decor-', qnt: 13}, button: {text: 'Заказать оформление grand декор'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Арка', link: 'arc'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
   - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Венки и браслеты', link: 'wreaths-bracelets'})
+  - page.list.push({title: 'Инсталляции', link: 'installation'})
+  - page.list.push({title: 'Гирлянды', link: 'garlands'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
