--- a/src/app/element/installation/index.jade
+++ b/src/app/element/installation/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Инсталляции', url: 'element/installation', type: 'element-page', class: 'page element installation', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/installation/installation-', qnt: 12}, button: {text: 'Заказать оформление инсталляций'}, list2: []};
 
+  - page.list.push({title: 'Presswall', link: 'presswall'})
   - page.list.push({title: 'Арка', link: 'arc'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Лестница', link: 'stairway'})
+  - page.list.push({title: 'Украшение стульев', link: 'chairs-decor'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
