--- a/src/app/element/light-constructions/index.jade
+++ b/src/app/element/light-constructions/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Световые конструкции и гирлянды', url: 'element/light-constructions', type: 'element-page', class: 'page element light-constructions', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/light-constructions/light-constructions-', qnt: 11}, button: {text: 'Заказать оформление световых конструкций'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
+  - page.list.push({title: 'Ниспадающие композиции', link: 'flowing-compositions'})
+  - page.list.push({title: 'Постеры и фото', link: 'posters-photos'})
+  - page.list.push({title: 'Centerpiece', link: 'centerpiece'})  
   - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
