--- a/src/app/element/photo-composition/index.jade
+++ b/src/app/element/photo-composition/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Композиции для фотозон', url: 'element/photo-composition', type: 'element-page', class: 'page element photo-composition', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/photo-composition/photo-composition-', qnt: 14}, button: {text: 'Заказать оформление композиций фотозон'}, list2: []};
 
-  - page.list.push({title: 'Арка', link: 'arc'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Гирлянды', link: 'garlands'})
+  - page.list.push({title: 'Входная зона', link: 'enter'})
+  - page.list.push({title: 'Драпировка тканями', link: 'drapery'})   
+  - page.list.push({title: 'Световые конструкции', link: 'light-constructions'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
