--- a/src/app/element/posters-photos/index.jade
+++ b/src/app/element/posters-photos/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Постеры и фото', url: 'element/posters-photos', type: 'element-page', class: 'page element posters-photos', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/posters-photos/posters-photos-', qnt: 11}, button: {text: 'Заказать оформление постеров и фото'}, list2: []};
 
-  - page.list.push({title: 'Арка', link: 'arc'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Указатели и таблички', link: 'signs-labels'})
+  - page.list.push({title: 'Композиции на столы', link: 'table-composition'})
+  - page.list.push({title: 'Grand декор', link: 'grand-decor'})   
+  - page.list.push({title: 'Букеты и бутоньерки', link: 'bouquets-boutonnieres'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
