--- a/src/app/element/presswall/index.jade
+++ b/src/app/element/presswall/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Presswall', url: 'element/presswall', type: 'element-page', class: 'page element presswall', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/presswall/presswall-', qnt: 12}, button: {text: 'Заказать оформление presswall'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Постеры и фото', link: 'posters-photos'})
+  - page.list.push({title: 'Centerpiece', link: 'centerpiece'})
+  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'}) 
+  - page.list.push({title: 'Сервировка стола', link: 'tableware'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
