--- a/src/app/element/swing/index.jade
+++ b/src/app/element/swing/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Качели', url: 'element/swing', type: 'element-page', class: 'page element swing', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/swing/swing-', qnt: 10}, button: {text: 'Заказать оформление качелей'}, list2: []};
 
-  - page.list.push({title: 'Арка', link: 'arc'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
+  - page.list.push({title: 'Украшение авто', link: 'auto-decor'})
+  - page.list.push({title: 'Композиции для фотозон', link: 'photo-composition'})
+  - page.list.push({title: 'Канделябры', link: 'candelabra'})   
   - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
