--- a/src/app/element/tableware/index.jade
+++ b/src/app/element/tableware/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Сервировка стола', url: 'element/tableware', type: 'element-page', class: 'page element tableware', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/tableware/tableware-', qnt: 12}, button: {text: 'Заказать оформление стола'}, list2: []};
 
-  - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+  - page.list.push({title: 'Букеты и бутоньерки', link: 'bouquets-boutonnieres'})
+  - page.list.push({title: 'Украшение авто', link: 'auto-decor'})
+  - page.list.push({title: 'Композиции для фотозон', link: 'photo-composition'})   
+  - page.list.push({title: 'Канделябры', link: 'candelabra'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
