--- a/src/app/element/wreaths-bracelets/index.jade
+++ b/src/app/element/wreaths-bracelets/index.jade
@@ -6,10 +6,11 @@ block vars
 
   - var page = {title: 'Венки и браслеты', url: 'element/wreaths-bracelets', type: 'element-page', class: 'page element wreaths-bracelets', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/wreaths-bracelets/wreaths-bracelets-', qnt: 13}, button: {text: 'Заказать оформление венков и браслетов'}, list2: []};
 
+  - page.list.push({title: 'Световые конструкции', link: 'light-constructions'})
+  - page.list.push({title: 'Presswall', link: 'presswall'}) 
+  - page.list.push({title: 'Арка', link: 'arc'})
   - page.list.push({title: 'Лестница', link: 'stairway'})
-  - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
-  - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
+
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
