--- a/src/app/zone/cake-takeaway/index.jade
+++ b/src/app/zone/cake-takeaway/index.jade
@@ -8,10 +8,10 @@ block vars
 
   - var page = {title: 'Вынос торта', url: 'zone/cake-takeaway', type: 'zone-page', class: 'page zone cake-takeaway', content: {desc: description, decor: decor, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/cake-takeaway/cake-takeaway-', qnt: 12}, button: {text: 'Заказать оформление выноса торта'}, list2: []};
 
-  - page.list.push({title: 'Welcome', link: 'welcome'})
+  - page.list.push({title: 'Лаунж-зона', link: 'lounge'})
   - page.list.push({title: 'Президиум', link: 'presidium'})
-  - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
-  - page.list.push({title: 'Детский стол', link: 'kinder-table'})
+  - page.list.push({title: 'Зона аперитива', link: 'apperitive'})
+  - page.list.push({title: 'Зона подарков и пожеланий', link: 'gifts-wishes'})
 
 
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
