--- a/src/app/zone/kinder-table/index.jade
+++ b/src/app/zone/kinder-table/index.jade
@@ -8,10 +8,10 @@ block vars
 
   - var page = {title: 'Детский стол', url: 'zone/kinder-table', type: 'zone-page', class: 'page zone kinder-table', content: {desc: description, decor: decor, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/kinder-table/kinder-table-', qnt: 11}, button: {text: 'Заказать оформление детского стола'}, list2: []};
 
-  - page.list.push({title: 'Welcome', link: 'welcome'})
+  - page.list.push({title: 'Зона аперитива', link: 'apperitive'})
+  - page.list.push({title: 'Зона подарков и пожеланий', link: 'gifts-wishes'})
+  - page.list.push({title: 'Лаунж-зона', link: 'lounge'})
   - page.list.push({title: 'Президиум', link: 'presidium'})
-  - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
-  - page.list.push({title: 'Выездная регистрация', link: 'registration'})
 
 
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
