--- a/src/app/zone/registration/index.jade
+++ b/src/app/zone/registration/index.jade
@@ -7,10 +7,10 @@ block vars
 
   - var page = {title: 'Выездная регистрация', url: 'zone/registration', type: 'zone-page', class: 'page zone registration', content: {desc: description, elements: elements}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/registration/registration-', qnt: 12}, button: {text: 'Заказать оформление выездной регистрации'}, list2: []};
 
-  - page.list.push({title: 'Welcome', link: 'welcome'})
   - page.list.push({title: 'Президиум', link: 'presidium'})
-  - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
-  - page.list.push({title: 'Детский стол', link: 'kinder-table'})
+  - page.list.push({title: 'Зона аперитива', link: 'apperitive'})
+  - page.list.push({title: 'Зона подарков и пожеланий', link: 'gifts-wishes'})
+  - page.list.push({title: 'Лаунж-зона', link: 'lounge'})
 
 
   - page.list2.push({title: 'Подвесной декор', link: 'element/hanging-decor'})
