--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -1,12 +1,28 @@
 
 .header-title
-  width: 100%
-  text-align: center
   font-size: 0.8rem
   +menu_font
   margin: 0.5rem 0 0.5rem
   span
     display: block
+  .left.header-title
+    width: 40%
+    left: 0
+    text-align: left
+    background: yellow
+    position: absolute
+  .center.header-title
+    width: 20%
+    left: 40%
+    position: absolute
+    text-align: center
+   
+  .right.header-title
+    width: 40%
+    left: 60%
+    font-size: 1.2rem
+    text-align: center
+    position: absolute
 
 .row.first-page-title
   margin: 1rem auto 5rem
